--- a/css/main.scss
+++ b/css/main.scss
@@ -2,19 +2,15 @@
 $orange: #e45028;
 $yellow: #f9b43b;
 $black: #2f3234;
+$black_deep:#1f2122;
 $red: #e35028;
-
 // Normalize
 @import "_misk/normalize.scss";
-
 // Setups
-
 @import "_misk/mixins";
 @import "_misk/fonts";
 @import "_misk/layout";
-
 // Blocks
-
 @import "blocks/hero";
 @import "blocks/header";
 @import "blocks/nav";
@@ -28,6 +24,4 @@ $red: #e35028;
 @import "blocks/work";
 @import "blocks/delivery";
 @import "blocks/form";
-
-
-
+@import "blocks/footer";
