--- a/css/blocks/button.scss
+++ b/css/blocks/button.scss
@@ -1,25 +1,32 @@
 .btn {
-  border-radius: 5px;
-  padding: 10px 15px;
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-  background: $red;
-  font-size: 13px;
+    border-radius: 5px;
+    padding: 10px 15px;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    background: $black;
+    font-size: 13px;
+    &:hover {
+        background: $black_deep;
+    }
+}
+
+.btn--red {
+    background: $red;
 }
 
 .button__reset {
-  outline: initial;
-  border: initial;
-  background: initial;
-  color: #fff;
-//   &:active, &:hover {
-//     border-radius: 5px;
-//     padding: 10px 15px;
-//     color: #fff;
-//     text-decoration: none;
-//     text-transform: uppercase;
-//     background: $red;
-//     font-size: 13px;
-//   }
+    outline: initial;
+    border: initial;
+    background: initial;
+    color: #fff;
+    //   &:active, &:hover {
+    //     border-radius: 5px;
+    //     padding: 10px 15px;
+    //     color: #fff;
+    //     text-decoration: none;
+    //     text-transform: uppercase;
+    //     background: $red;
+    //     font-size: 13px;
+    //   }
 }
