--- a/css/blocks/reviews.scss
+++ b/css/blocks/reviews.scss
@@ -1,28 +1,25 @@
 .reviews {
     background: $black;
-
 }
 
 .reviews__list {
     display: flex;
     flex-wrap: wrap;
     height: 100%;
-
 }
 
 .reviews__item {
     width: 25%;
     height: 50%;
     filter: grayscale(100%);
-
-    background: center center / cover no-repeat ;
+    background: center center / cover no-repeat;
     position: relative;
-    &:hover{
-        .reviews__hover-block{
-        
-        opacity: 1;
-        transform: scale(1);;
-    }
+    &:hover {
+        .reviews__hover-block {
+            opacity: 1;
+            transform: scale(1);
+            ;
+        }
     }
 }
 
@@ -40,3 +37,6 @@
     padding: 20px;
 }
 
+.reviews__text {
+    margin-bottom: 17px;
+}
